# scanned-pdf

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json
crates/scan-cli/: Cargo.toml
crates/scan-cli/src/: main.rs
crates/scan-core/: Cargo.toml
crates/scan-core/src/: lib.rs
crates/scan-wasm/: Cargo.toml
crates/scan-wasm/src/: lib.rs
docs/: benchmark-plan.md  critique.md  implementation-plan.md  research.md  rust-implementation.md
src/: App.tsx  pdf.ts  scanEffect.ts  styles.css
