[package]
name = "scan-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scanned-pdf"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
scan-core = { path = "../scan-core" }
