[package]
name = "scan-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scanned-pdf"
path = "src/main.rs"

[dependencies]
hayro = "0.7.1"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
pdfium-render = "0.9.2"
scan-core = { path = "../scan-core" }
